# bevy-plugin-builder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
examples/: basic_plugin.rs  complex_plugin.rs  migration_guide.rs
src/: lib.rs  macros.rs  metadata.rs  registry.rs  traits.rs
tests/: integration.rs  ui.rs
tests/ui/compile_fail/: unknown_key.rs  unknown_key.stderr
