[package]
  name = "bevy-plugin-builder"
  version = "0.1.2"
  edition = "2021"
  rust-version = "1.87"  # Follow Bevy's policy: latest stable
  authors = ["Noah Sabaj <noahsabaj@gmail.com>"]
  license = "MIT OR Apache-2.0"  # 2025 Bevy standard
  description = "Declarative plugin system for Bevy - eliminate boilerplate with beautiful syntax"
  homepage = "https://github.com/noahsabaj/bevy-plugin-builder"
  repository = "https://github.com/noahsabaj/bevy-plugin-builder"
  documentation = "https://docs.rs/bevy-plugin-builder"
  readme = "README.md"
  keywords = ["bevy", "plugin", "macro", "declarative", "automation"]
  categories = ["game-development", "development-tools::procedural-macro-helpers"]
  exclude = ["assets/", "examples/screenshots/"]

  [dependencies]
  bevy = "0.16"

  [dev-dependencies]
  bevy = { version = "0.16", features = ["default"] }
  trybuild = "1.0"  # For macro testing

  [workspace]
  # If we create multiple related crates later

  [[example]]
  name = "basic_plugin"
  required-features = []

  [[example]]
  name = "complex_plugin"
  required-features = []

  [package.metadata.docs.rs]
  features = ["bevy/default"]
