[package]
  name = "bevy-plugin-builder"
  version = "0.3.0"
  edition = "2021"
  rust-version = "1.91"  # Required for const TypeId::of in introspection feature
  authors = ["Noah Sabaj <noahsabaj@gmail.com>"]
  license = "MIT OR Apache-2.0"  # 2025 Bevy standard
  description = "Declarative plugin system for Bevy"
  homepage = "https://github.com/noahsabaj/bevy-plugin-builder"
  repository = "https://github.com/noahsabaj/bevy-plugin-builder"
  documentation = "https://docs.rs/bevy-plugin-builder"
  readme = "README.md"
  keywords = ["bevy", "plugin", "macro", "declarative", "automation"]
  categories = ["game-development", "development-tools::procedural-macro-helpers"]
  exclude = ["assets/", "examples/screenshots/"]

  [features]
  default = []
  # Enable runtime plugin introspection (PluginRegistry, metadata queries)
  introspection = []
  # Enable test generation with generate_tests: syntax
  testing = []
  # Enable all features
  full = ["introspection", "testing"]

  [dependencies]
  bevy = "0.18.0-rc.2"

  [dev-dependencies]
  bevy = { version = "0.18.0-rc.2", features = ["default"] }
  trybuild = "1.0"  # For macro testing

  [workspace]
  # If we create multiple related crates later

  [[example]]
  name = "basic_plugin"
  required-features = []

  [[example]]
  name = "complex_plugin"
  required-features = []

  [package.metadata.docs.rs]
  features = ["bevy/default"]
